# Moo

./: .gitignore  README.md  flake.nix  pyproject.toml
lib/: candle.py  movingAverage.py
notebook/: part2.ipynb  part3.ipynb  part4.ipynb  part5.ipynb
notebook/data/: 1218.csv  2330.csv  TRD_Year.csv  index.csv  industryRet.csv
